# cb1_data_analysis

./: .env.example  .gitignore  Makefile  PLAN.md  README.md  pyproject.toml
analysis/: blog_v2.ipynb  cb1_story.ipynb  community_vs_board.ipynb  does_showing_up_work.ipynb  entity_graph.ipynb  regressions.ipynb  waterfront_eda.ipynb  waterfront_saga.ipynb
blog/: does-showing-up-work.html  williamsburg-waterfront.html
blog/site_theme/: footer.html  nav.html  site.css
cb1/: anthropic_client.py  cli.py  config.py  costs.py  db.py  download.py  extract.py  grouping.py  identify.py  models.py  ocr_backfill.py  pdf_text.py  rasterize.py  scrape.py  segment.py  vision_ocr.py
cb1/eval/: matching.py  run.py  scorecard.py
data/: meetings.json  overrides.json  vote_overrides.json
data/db/: cannabis.parquet  incidents.parquet  licenses.parquet  meetings.parquet  speakers.parquet  votes.parquet
eval/: LABELING.md  review.html
eval/golden/: cb1-2016-02-09.draft.json  cb1-2016-02-09.json  cb1-2019-02-12.draft.json  cb1-2019-02-12.json  cb1-2023-06-13.draft.json  cb1-2023-06-13.json
scripts/: render_blog.py
tests/: test_costs.py  test_db.py  test_eval_matching.py  test_extract.py  test_grouping.py  test_identify.py  test_models.py  test_scrape.py  test_segment.py
tests/fixtures/: index_hrefs.txt
