[project]
name = "cb1"
version = "0.1.0"
description = "Brooklyn CB1 meeting minutes -> structured dataset pipeline"
requires-python = ">=3.12"
dependencies = [
    "anthropic[bedrock]>=0.40",
    "duckdb>=1.1",
    "httpx>=0.27",
    "pdfplumber>=0.11",
    "pydantic>=2.9",
    "pymupdf>=1.24",
    "rapidfuzz>=3.9",
    "tenacity>=9.0",
]

[dependency-groups]
analysis = [
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "nbconvert>=7.17.1",
    "nbformat>=5.10.4",
    "pandas>=3.0.3",
]
dev = ["pytest>=8.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cb1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
